--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run dev:client & npm run dev:server",
+    "dev:server": "cd ./src/server && go run .",
+    "dev:client": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview",
+    "start": "vite preview",
     "format": "npx prettier . --write",
     "format:check": "npx prettier . --check"
   },
   "dependencies": {
-    "@olli/jex": "npm:@jsr/olli__jex",
+    "@olli/jex": "^0.6.3",
     "solid-js": "^1.8.20",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
